--- a/pkg/inst/doc/sequence.bib
+++ b/pkg/inst/doc/sequence.bib
@@ -1,3 +1,160 @@
+@article{sequence:Handelsman:1998,
+    author = "Jo Handelsman and Michelle R. Rondon and Sean F. Brady and Jon Clardy and Robert M. Goodman",
+    title = "Molecular biological access to the chemistry of unknown soil microbes: a new frontier for natural products",
+    journal = "Chemistry and Biology",
+    volume = "5",
+    number = "10",
+    pages = "245--249",
+    year = "1998",
+    issn = "1074-5521",
+}
+
+@article{sequence:Levenshtein:1966,
+    author = {Levenshtein, Vladimir},
+    journal = {Soviet Physics Doklady},
+    title = {Binary Codes Capable of Correcting Deletions, Insertions and Reversals},
+    volume = 10,
+    year = 1966
+}
+
+
+@article{sequence:Thompson:1999,
+    author = {Thompson, J. D. and Plewniak, F. and Poch, O.},
+    issn = {1460-2059},
+    journal = {Bioinformatics},
+    month = jan,
+    number = {1},
+    pages = {87--88},
+    title = {{BAliBASE:} a benchmark alignment database for the evaluation of multiple alignment programs},
+    volume = {15},
+    year = {1999}
+}
+
+
+@article{sequence:Turnbaugh:2007,
+    author = "Peter J. Turnbaugh and Ruth E. Ley and Micah Hamady and Claire M. Fraser-Liggett and Rob Knight and Jeffrey I. Gordon",
+    title = "The Human Microbiome Project",
+    journal = "Nature",
+    volume = "449",
+    number = "",
+    pages = "804--810",
+    year = "2007",
+}
+
+@Article{sequence:Volker:2010,
+    AUTHOR = {Mai, Volker and Ukhanova, Maria and Baer, David J.},
+    TITLE = {Understanding the Extent and Sources of Variation in Gut Microbiota Studies; a Prerequisite for Establishing Associations with Disease},
+    JOURNAL = {Diversity},
+    VOLUME = {2},
+    YEAR = {2010},
+    NUMBER = {9},
+    PAGES = {1085--1096},
+    ISSN = {1424-2818},
+}
+
+@article{sequence:Altschul:1990,
+    author = {Altschul, S. F. and Gish, W. and Miller, W. and Myers, E. W. and Lipman, D. J.},
+    issn = {0022-2836},
+    journal = {Journal of Molecular Biology},
+    month = oct,
+    number = {3},
+    pages = {403--410},
+    title = {Basic local alignment search tool},
+    volume = {215},
+    year = {1990}
+}
+
+@article{sequence:Smith:1981,
+    author = {Smith, T. F. and Waterman, M. S.},
+    issn = {0022-2836},
+    journal = {Journal of Molecular Biology},
+    month = mar,
+    number = {1},
+    pages = {195--197},
+    title = {Identification of common molecular subsequences},
+    volume = {147},
+    year = {1981}
+}
+
+@article{sequence:Larkin:2007,
+    author = {Larkin, M.A. and Blackshields, G. and Brown, N.P. and Chenna, R. and McGettigan, P.A. and McWilliam, H. and Valentin, F. and Wallace, I.M. and Wilm, A. and Lopez, R. and Thompson, J.D. and Gibson, T.J. and Higgins, D.G.},
+    title = {Clustal W and Clustal X version 2.0},
+    journal = {Bioinformatics},
+    volume = {23},
+    issue = {21},
+    month = {November},
+    year = {2007},
+    issn = {1367-4803},
+    pages = {2947--2948},
+} 
+
+@article{sequence:Lassmann:2006,
+    author = {Lassmann, T. and Sonnhammer, E. L.},
+    issn = {1362-4962},
+    journal = {Nucleic Acids Research},
+    month = {July},
+    title = {Kalign, Kalignvu and Mumsa: web servers for multiple sequence alignment.},
+    volume = 34,
+    year = 2006
+}
+
+@article{sequence:Katoh:2002,
+    author = {Katoh, K. and Misawa, K. and Kuma, K. and Miyata, T.},
+    journal = {Nucleic Acids Research},
+    number = {14},
+    pages = {3059--3066},
+    title = {MAFFT: a novel method for rapid multiple sequence alignment based on fast Fourier transform},
+    volume = {30},
+    year = {2002}
+}
+
+@ARTICLE{sequence:Edgar:2004,
+    author = {Robert C. Edgar},
+    title = {Muscle: multiple sequence alignment with high accuracy and high throughput},
+    journal = {Nucleic Acids Research},
+    year = {2004},
+    volume = {32},
+    pages = {1792--1797}
+}
+
+@article{sequence:Edgar:2004b,
+    author = {Edgar, Robert},
+    issn = {1471-2105},
+    journal = {BMC Bioinformatics},
+    month = aug,
+    number = {1},
+    pages = {113+},
+    title = {MUSCLE: a multiple sequence alignment method with reduced time and space complexity},
+    volume = {5},
+    year = {2004}
+}
+
+@article{sequence:Notredame:2000,
+    author = {Notredame, C. and Higgins, D. G. and Heringa, J.},
+    issn = {0022-2836},
+    journal = {Journal of Molecular Biology},
+    month = sep,
+    number = {1},
+    pages = {205--217},
+    title = {{T-Coffee:} A novel method for fast and accurate multiple sequence alignment},
+    volume = {302},
+    year = {2000}
+}
+
+
+@article{sequence:Eddy:1998,
+    author = {Eddy, S. R.},
+    issn = {1367-4803},
+    journal = {Bioinformatics},
+    month = jan,
+    number = {9},
+    pages = {755--763},
+    title = {Profile hidden Markov models},
+    volume = {14},
+    year = {1998}
+}
+
+
 @article{sequence:Ukkonen:1992,
     author    = {Esko Ukkonen},
     title     = {Approximate String Matching with q-grams and Maximal Matches},
