Added background information about classifiers
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@301 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 9ed4f37cb94851fbc6b4493a2cf53e2814a94c62

--- a/pkg/BioTools/Work/vignette/sequence.bib
+++ b/pkg/BioTools/Work/vignette/sequence.bib
@@ -1,3 +1,44 @@
+@article{RDP,
+  title={Naive Bayesian classifier for rapid assignment of rRNA sequences into the new bacterial taxonomy},
+  author={Wang, Qiong and Garrity, George M and Tiedje, James M and Cole, James R},
+  journal={Applied and environmental microbiology},
+  volume={73},
+  number={16},
+  pages={5261--5267},
+  year={2007},
+  publisher={Am Soc Microbiol}
+}
+
+@article{kalign,
+  title={Kalign--an accurate and fast multiple sequence alignment algorithm},
+  author={Lassmann, Timo and Sonnhammer, Erik LL},
+  journal={BMC bioinformatics},
+  volume={6},
+  number={1},
+  pages={298},
+  year={2005},
+  publisher={BioMed Central Ltd}
+}
+
+@article{Wu-Manber,
+  title={Fast Text Searching Allowing Errors},
+  author={Wu, S and Manber, U},
+  journal={Communications of the ACM},
+  volume={35},
+  pages={83--91},
+  year={1992},
+}
+
+@Article{sequence:BioC,
+    author = {Robert C Gentleman and Vincent J. Carey and Douglas M. Bates and {others}},
+    title = {Bioconductor: Open software development for computational biology and bioinformatics},
+    journal = {Genome Biology},
+    volume = {5},
+    year = {2004},
+    pages = {R80},
+    url = {http://genomebiology.com/2004/5/10/R80},
+  }
+
 @article{sequence:Handelsman:1998,
     author = "Jo Handelsman and Michelle R. Rondon and Sean F. Brady and Jon Clardy and Robert M. Goodman",
     title = "Molecular biological access to the chemistry of unknown soil microbes: a new frontier for natural products",
